*SVN*

* Added fixture accessor methods that can be used when instantiated fixtures are disabled.

    fixtures :web_sites

    def test_something
      assert_equal "Ruby on Rails", web_sites(:rubyonrails).name
    end

* Added DoubleRenderError exception that'll be raised if render* is called twice #518 [Nicholas Seckar]

* Fixed exceptions occuring after render has been called #1096 [Nicholas Seckar]

* CHANGED: validates_presence_of now uses Errors#add_on_blank, which will make "  " fail the validation where it didn't before #1309

* Added Errors#add_on_blank which works like Errors#add_on_empty, but uses Object#blank? instead

* Added the :if option to all validations that can either use a block or a method pointer to determine whether the validation should be run or not. #1324 [Duane Johnson/jhosteny]. Examples:

  Conditional validations such as the following are made possible:
    validates_numericality_of :income, :if => :employed?

  Conditional validations can also solve the salted login generator problem:
    validates_confirmation_of :password, :if => :new_password?
  
  Using blocks:
    validates_presence_of :username, :if => Proc.new { |user| user.signup_step > 1 }

* Fixed use of construct_finder_sql when using :join #1288 [dwlt@dwlt.net]

* Fixed that :delete_sql in has_and_belongs_to_many associations couldn't access record properties #1299 [Rick Olson]

* Fixed that clone would break when an aggregate had the same name as one of its attributes #1307 [bitsweat]

* Changed that destroying an object will only freeze the attributes hash, which keeps the object from having attributes changed (as that wouldn't make sense), but allows for the querying of associations after it has been destroyed.
